--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "swiper": "^10.0.4",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
+    "vue-loading-overlay": "^6.0.3",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
